# Caricatures

./: .gitignore  README.md  hello.py  pyproject.toml  repo_setup.py  requirements.txt  requirements.yaml
docs/: expts.md  mkdocs.yml  tasks.md  thoughts.md
docs/docs/: index.md  rdnotes.md
experiments/SCAN/causal_model/: causal_model_pyvene.py  causal_model_v0.ipynb  causal_model_v0.py  causal_model_v1.py  causal_model_v1_pyvene.py  causal_model_v2.ipynb  causal_model_v2_BU.py  causal_model_v2_BU_pyvene.py  causal_model_v2_TD.py
experiments/SCAN/decoder/: gemma2_scan.py  gemma_scan.py  gemma_scan_test_gen.ipynb  gpt2_scan_test_gen.ipynb  gpt_scan.py  gpt_scan_eval.py  gpt_scan_test_gen.ipynb  readme.md  (+1 more)
experiments/mqnli/: data_util.py  fol_model.py  generate_data.py  natural_logic_model.py
experiments/notebooks/: causal_model_building.ipynb  causal_model_cogs.ipynb  causal_model_scan.ipynb  t5_scan.ipynb
experiments/python/: readme.md  t5_scan.py  t5_scan_eval.py  t5_scan_nb_convert.py
experiments/pyvene/: MQNLI.ipynb  causal_model_scan.ipynb  das_hierarchical_equality.ipynb  das_sum_of_three.ipynb  pyvene_expts.ipynb
experiments/rl_expts/: gpt2-sentiment.ipynb  gpt2_clm.ipynb  gpt2_reinforce.ipynb  gpt2_scan_ppo.py  gpt2_scan_reinforce.ipynb  gpt2_sentiment_ppo.ipynb  readme.md  rl_trainers.py  scan_constants.py  t5-summarization-with-proximal-policy-optimization.ipynb
experiments/torch_fx/: test.ipynb
notebooks/: t5_scan.ipynb
reports/: scan_evals.md
src/mqnli/: data_util.py  fol_model.py  generate_data.py  make_subphrase_labels.py
(+654 files in other folders)
